--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1 class="text-center">Constant Contact Synchronization Tool</h1>
-    <div class="text-center mt-4">
-        <a href="/authorize" class="btn btn-primary">Authorize with Constant Contact</a>
-    </div>
-    <div class="text-center mt-3">
-        <!-- This is just a placeholder; you can display more status info here. -->
-        <p>Status: Not synchronized</p>
-    </div>
+  <div class="content">
+    <h1>Welcome to the Synchronization App</h1>
+    <p>Click the button below to authorize the application:</p>
+    <a href="{{ url_for('oauth2.authorize') }}" class="btn btn-primary">Authorize</a>
+    <hr>
+    <p>Or initiate a manual sync:</p>
+    <form action="/manual_sync" method="post">
+        <button type="submit" class="btn btn-secondary">Manual Sync</button>
+    </form>
+    {% if last_sync %}
+    <hr>
+    <p>Last sync status: {{ last_sync }}</p>
+    {% endif %}
+  </div>
 {% endblock %}
