--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <title>Constant Sync</title>
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </head>
 <body>
 
