--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     </form>
     {% if last_sync %}
     <hr>
-    <p>Status: {{ last_sync }}</p>
+    <p>Status: <strong>{{ last_sync }}</strong></p>
     {% endif %}
   </div>
 {% endblock %}
